# watchdog

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/skills/grill_me/: SKILL.md
.github/skills/improve_codebase_arch/: REFERENCE.md  SKILL.md
.github/skills/production-coding-style/: SKILL.md
.github/skills/write_a_skill/: SKILL.md
config/: prometheus.yml  quality-policy.yaml
config/grafana-dashboards/: dashboard.yml  watchdog-quality.json
contracts/: event-envelope.avsc
tests/: conftest.py  test_alerts.py  test_anomaly_detector.py  test_avro_serde.py  test_circuit_breaker.py  test_content_validator.py  test_idempotency.py  test_integration.py  test_lag_tracker.py  test_retry.py  test_router.py  test_schema_validator.py  test_smoke.py  test_statistical_checker.py  test_window_monitor.py
watchdog/: alerts.py  anomaly_detector.py  avro_serde.py  circuit_breaker.py  config.py  consumer.py  content_validator.py  lag_tracker.py  main.py  metadata.py  metrics.py  models.py  producer.py  quality_store.py  retry.py  router.py  schema_validator.py  statistical_checker.py  window_monitor.py
watchdog/core/: config.py  exceptions.py  logging_setup.py  models.py  retry.py
watchdog/monitoring/: alerts.py  anomaly_detector.py  lag_tracker.py  metrics.py  window_monitor.py
watchdog/persistence/: metadata.py  quality_store.py
watchdog/pipeline/: circuit_breaker.py  consumer.py  producer.py  router.py
watchdog/validation/: avro_serde.py  content_validator.py  schema_validator.py  statistical_checker.py
